@@ -7,6 +7,7 @@ Ronny Pfannschmidt
 Benjamin Peterson
 Floris Bruynooghe
 Jason R. Coombs
+Wouter van Ackooy
 Samuele Pedroni
 Brianna Laugher
 Carl Friedrich Bolz
